# proj_sql

./: README.md
sql_api/: pyproject.toml
sql_api/sql_api/: .env  app.py  database.py  login.py  main.py  models.py
sql_api/sql_api/utils/: jwt.py  uuid.py
web_sql/: package-lock.json  package.json  tailwind.config.ts
web_sql/app/: globals.css  layout.tsx  page.tsx
web_sql/app/dash/: layout.tsx  page.tsx
web_sql/app/dash/books/: page.tsx
web_sql/app/dash/personal/: page.tsx
web_sql/app/sign-up/: page.tsx
web_sql/components/: bookCard.tsx  borrowedBookCard.tsx  icon-list.tsx  site-sheet.tsx  siteFooter.tsx  siteHeader.tsx  themeToggle.tsx  wishlistBookCard.tsx
web_sql/components/dash/: rate.tsx  title.tsx
web_sql/components/dash/faq/: data.ts  faq.tsx
web_sql/config/: books.tsx  icons.tsx  siteconfig.tsx  tags.tsx
